# nrl_crawler

./: .gitignore  README.md  env.py  pyproject.toml
nrl_crawler/: main.py
nrl_crawler/src/: fetch.py  main.py  models.py  teams.py  tools.py  utils_ladder.py  utils_players.py  utils_team_stats.py  web.py
