[tool.poetry]
name = "nrl-crawler"
version = "0.1.0"
description = ""
authors = ["mintydevdaz <mintydevdaz@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
niquests = "^3.8.0"
selectolax = "^0.3.21"
chompjs = "^1.3.0"
tqdm = "^4.66.5"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
